@@ -12,6 +12,7 @@ Changelog
  * Added `Page` methods `can_exist_under`, `can_create_at`, `can_move_to` for customising page type business rules
  * `wagtailadmin.utils.send_mail` now passes extra keyword arguments to Django's `send_mail` function (Matthew Downey)
  * `page_unpublish` signal is now fired for each page that was unpublished by a call to `PageQuerySet.unpublish()`
+ * Add `get_upload_to` method to `AbstractImage`, to allow overriding the default image upload path (Ben Emery)
  * Fix: HTTP cache purge now works again on Python 2 (Mitchel Cabuloy)
  * Fix: Locked pages can no longer be unpublished (Alex Bridge)
  * Fix: Site records now implement `get_by_natural_key`
